# FileClassifier

./: README.md  install.sh  mkdocs.yml  pyproject.toml
data/: testsDirectory.txt
src/: Classifier.py  FileUtils.py  TopicModeler.py  main.py
src/model/: SVMFileClassifier.py  TopicModeler.py  TransformersTopicModeler.py
tests/: test_Classifier.py  test_TopicModeler.py
