[tool.poetry]
name = "FileClassifer"
version = "0.1.1"
description = "Classify based on topic modeling the files in your folder into suitable destinations."
authors = ["Antoine Boucher <antoine.bou13@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.0"
rich = "^10.13.0"
typer = "^0.4.0"
pandas = "^1.3.4"
gensim = "^4.3.1"
nltk = "^3.6.5"
scikit-learn = "^1.2.2"
transformers = "^4.28.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-coverage = "^0.0"
sphinx = "^7.0.0"
pre-commit = "^3.2.2"
mkdocstrings = "^0.21.2"
genbadge = "^1.1.0"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
